# always-best-estimates

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
.claude/task-state/: current.md
backend/abe/: __init__.py  api.py  calc.py  config.py  constants.py  migrations.py  pipeline.py  registry.py  scheduler.py  storage.py
backend/abe/afml/: __init__.py  fracdiff.py  purged_cv.py
backend/abe/blend/: __init__.py  black_litterman.py  confidence.py  covariance.py  views.py
backend/abe/eval/: __init__.py  walk_forward.py
backend/abe/features/: __init__.py  basic.py  build.py
backend/abe/ingest/: __init__.py  macro.py  prices.py  sources.py
backend/abe/model/: __init__.py  base.py  jepa.py  train.py
backend/abe/optimize/: __init__.py  min_variance.py  mvu.py
docs/: track2-scenario-engine-plan.md
docs/eval/: jepa-vs-ewma-2026-07-08.md
docs/investigations/: seed-hardening-research-2026-07-07.md
docs/soak/: track2-soak-2026-07-11.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  main.tsx
frontend/src/components/: CompareView.tsx  DashboardView.tsx  RunHeader.tsx  ScenarioEditor.tsx  StageCard.tsx  StageDetailTab.tsx
scripts/: launch-abe.ps1  smoke.py  soak.py
tests/: conftest.py  seeding.py  test_afml_fracdiff.py  test_afml_purged_cv.py  test_api.py  test_api_static.py  test_blend_black_litterman.py  test_blend_confidence.py  test_blend_covariance.py  test_blend_views.py  test_calc.py  test_config.py  test_config_api.py  test_config_run.py  test_eval_walk_forward.py  test_feature_sets.py  test_features_basic.py  test_features_build.py  test_ingest_macro.py  test_ingest_prices.py  test_min_variance.py  test_model_base.py  test_model_jepa.py  test_model_train.py  test_optimize_mvu.py  test_pipeline.py  test_pipeline_parity.py  test_registry.py  test_scaffold.py  test_scheduler.py  test_smoke.py  test_storage.py
tests/golden/: parity_central_v1.json
