[project]
name = "always-best-estimates"
version = "0.1.0"
description = "Local, single-user, always-on portfolio engine: ingest -> features -> world-model forecast -> Black-Litterman blend -> constrained optimization."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pyportfolioopt==1.6.0",
    "cvxpy>=1.5",
    "yfinance>=1.5",
    "fredapi>=0.5.2",
    "torch>=2.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "python-dotenv>=1.0",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/abe"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["abe"]

[tool.mypy]
python_version = "3.12"
mypy_path = "backend"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "pypfopt.*",
    "cvxpy.*",
    "yfinance.*",
    "fredapi.*",
    "scipy.*",
    "sklearn.*",
    "statsmodels.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests/ on sys.path so cross-test imports survive every import mode (incl.
# --import-mode=importlib): the pinned frozen-WorldModel contract import
# (`from test_model_base import assert_worldmodel_contract`, reused by Step
# 13's JEPA suite) and the shared synthetic-price helpers (`from seeding
# import ...`, used by test_pipeline.py + test_api.py). scripts/ on sys.path
# so tests/test_smoke.py can import the Step 9 smoke core (`from smoke
# import run_smoke`). NOTE: tests/ precedes scripts/, so a future
# tests/smoke.py would SHADOW scripts/smoke.py — don't create one.
pythonpath = ["tests", "scripts"]
# Default runs stay offline (plan section 8: fetch is split from recompute; no
# accidental Yahoo hits) and off the real db (smoke hits it and runs a real
# solve). Select explicitly: `pytest -m network` / `-m realdb` / `-m smoke`
# (a CLI -m overrides addopts).
addopts = '-m "not network and not realdb and not smoke"'
markers = [
    "smoke: 60s real end-to-end smoke gate against the real db (no mocks; run via -m smoke; FAILS — never skips — when the db is absent, so the gate can't pass vacuously)",
    "network: real-Yahoo tests; skip with a reason when offline; run via -m network",
    "realdb: tests against the real backfilled db (ABE_REAL_DB or <root>/data/abe.db); skip with a reason when absent; run via -m realdb",
]
